# pgn-extractor

./: Cargo.toml  README.md  targets.txt
.github/workflows/: build-windows.yml
src/: lib.rs
